update commit dir and add code to geomap.cpp ,also fix reader class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
         "variant": "cpp",
         "*.ipp": "cpp",
         "any": "cpp",
-        "__tuple": "cpp"
+        "__tuple": "cpp",
+        "charconv": "cpp"
     }
 }
