--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,4 @@ add_executable(Test_Voronoi test/test_voronoi.cc)
 #target_link_libraries(Test_Converter PROJ::proj geovi)
 target_link_libraries(Test_Voronoi geovi PROJ::proj)
 target_link_directories(Test_Map PRIVATE ${CMAKE_SOURCE_DIR}/lib ${NLOPT_LIBRARY_DIRS})
-target_link_libraries(Test_Map geovi ${OSMIUM_XML_LIBRARIES} PROJ::proj lpsolve55 NLOPT_LIBRARIES)
+target_link_libraries(Test_Map geovi ${OSMIUM_XML_LIBRARIES} PROJ::proj NLopt::nlopt)
